fixed images on mobile (responsiveness)

--- a/styles.css
+++ b/styles.css
@@ -414,6 +414,13 @@ footer > p {
     display: none;
   }
 
+  .about_design_section > img {
+    height: 227px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
 }
 
 @media (max-width: 320px) {
